Update styling to work with Bootstrap 5

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,15 @@ include:
   - .htaccess
   - _pages
 
+permalink: pretty
+
+defaults:
+  - scope:
+      path: "_pages"
+      type: "pages"
+    values:
+      permalink: /:basename/
+
 sass:
   sass_dir: _sass
 
