Dummy data to help see what the site will look like

--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -1,11 +1,11 @@
 # Examples:
 
-# - title: pic1_description
-#   image: DSC_0366.JPG
-# - title: pic1_description
-#   image: DSC_0368.JPG
-# - title: pic_description
-#   image: 20150918_145800.jpg
+- title: pic1_description
+  image: dummy.png
+- title: pic1_description
+  image: bio-photo.JPG
+- title: pic_description
+  image: dummy.png
 # - title: pic1_description
 #   image: DSC_0030.jpg
 # - title: pic1_description
