--- a/_config.yml
+++ b/_config.yml
@@ -6,46 +6,36 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: The VECTR Lab
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  VECTR Lab Website.
-baseurl: ""
-url: ""
-
-include:
-  - .htaccess
-  - _pages
+title: VECTR Laboratory
+# email: your-email@domain.com
+description: >- # this means to ignore newlines until "baseurl:"
+  Verifiable & Control-Theoretic Robotics Laboratory (VECTR) at UCLA
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 permalink: pretty
 
 defaults:
   - scope:
-      path: "_pages"
+      path: "pages"
       type: "pages"
     values:
       permalink: /:basename/
 
-sass:
-  sass_dir: _sass
-
 # Conversion
-markdown: kramdown
-highlighter: rouge
-lsi: false
-excerpt_separator: "\n\n"
-incremental: false
-
-
+markdown            : kramdown
+highlighter         : rouge
+lsi                 : false
+excerpt_separator   : "\n\n"
+incremental         : false
 
 # Markdown Processing
 kramdown:
-  input: GFM
-  hard_wrap: false
-  auto_ids: true
-  footnote_nr: 1
-  entity_output: as_char
-  toc_levels: 1..6
-  smart_quotes: lsquo,rsquo,ldquo,rdquo
-  enable_coderay: false
-  parse_block_html: true # default for kramdown is false. This will enable using Markdown links
+  auto_ids          : true
+  entity_output     : as_char
+  toc_levels        : [1, 2, 3, 4, 5, 6]
+  smart_quotes      : lsquo,rsquo,ldquo,rdquo
+  input             : GFM
+  hard_wrap         : false
+  footnote_nr       : 1
+  show_warnings     : false
