--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,14 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
+include:
+  - _pages
+
 permalink: pretty
 
 defaults:
   - scope:
-      path: "pages"
+      path: "_pages"
       type: "pages"
     values:
       permalink: /:basename/
