--- a/_data/navbar.yml
+++ b/_data/navbar.yml
@@ -1,17 +1,14 @@
 - title: "Home"
   url: "/"
 
-- title: "Team"
-  url: "/team/"
-
-- title: "Vacancies"
-  url: "/vacancies/"
+- title: "Research"
+  url: "/research/"
 
 - title: "Publications"
   url: "/publications/"
 
-- title: "Research"
-  url: "/research/"
+- title: "People"
+  url: "/members/"
 
-- title: "(Pics)"
-  url: "/pictures/"
+- title: "Media"
+  url: "/media/"
