--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,191 +1,4 @@
 # Examples:
 
-- date: 29 October 2021
-  headline: "**Our new paper, on Cooper pairs above Tc, is published in [Science](https://www.science.org/doi/10.1126/science.abe3987)**.
-  See [SRON news](https://www.sron.nl/news/5169-elektronparen-blijven-stabiel-boven-kritische-temperatuur-supergeleiding), [TU Delft news](https://www.tudelft.nl/en/2021/eemcs/inexplicably-stable-electron-pairs-without-superconductivity), [Leiden news](https://www.universiteitleiden.nl/en/news/2021/10/new-quantum-liquid-discovered), [Physics World](https://physicsworld.com/a/cooper-pairs-spotted-above-critical-temperature-for-superconductivity/)."
-
-- date: 1 October 2021
-  headline: Maialen will join us within a collaboration with the [Swart Lab](http://www.ingmarswart.nl) -- welcome Maialen!
-
-- date: 15 September 2021
-  headline: Amber will join us with Casimir-Nanofront PhD fellowship -- welcome Amber!
-
-- date: 28 June 2021
-  headline: Welcome Jinwon!
-
-- date: 16 March 2021
-  headline: "Koen wrote about his research [in EurophysicsNews](https://epn.eps.org/wp-content/uploads/2021/04/EPN-52-2.pdf) (page 12)."
-
-- date: 16 February 2021
-  headline: "Our new paper on twisted bilayer graphene from our Leiden-ICFO collaboration [in PRR](https://journals.aps.org/prresearch/abstract/10.1103/PhysRevResearch.3.013153)."
-
-- date: 22 January 2021
-  headline: "**Koen wins the Ehrenfest-Afanassjewa prize for best physics thesis of the Netherlands!**"
-
-- date: 21 January 2021
-  headline: "[New paper on arXiv](https://arxiv.org/abs/2101.08535), on Cooper pairs above Tc"
-
-- date: 16 January 2021
-  headline: "Our [YSR paper ](https://www.nature.com/articles/s41467-020-20529-x) is out, in collaboration with  [Copenhagen](https://www.nbi.ku.dk/english/research/condensed-matter-physics/)."
-
-- date: 08 December 2020
-  headline: "Our [new paper ](https://www.nature.com/articles/s41535-020-00292-4) is out, in collaboration with the groups of [Baumberger](https://dqmp.unige.ch/baumberger/), [Perry](https://www.london-nano.com/our-people/our-people-bios/robin-perry) and [Mackenzie](https://www.mpg.de/6812374/chem_physik_fester_stoffe_mackenzie)."
-
-- date: 02 November 2020
-  headline: "Maarten's paper is published in [Microsyst Nanoeng](https://www.nature.com/articles/s41378-020-00209-y)."
-
-- date: 15 October 2020
-  headline: "Welcome Jiasen!"
-
-- date: 29 September 2020
-  headline: "TGB paper (led by ICFO and Geneva) is in [Nature Physics](https://www.nature.com/articles/s41567-020-01041-x)! See also coverage by Dorine Schenk in [NRC](https://www.nrc.nl/nieuws/2020/09/28/slome-elektronen-maken-grafeen-supergeleidend-a4013840)"
-
-- date: 14 September 2020
-  headline: "Maarten's paper is published in [PRB](https://journals.aps.org/prb/abstract/10.1103/PhysRevB.102.115416)."
-
-- date: 18 March 2020
-  headline: "LION made a nice [video](https://www.youtube.com/watch?v=zQftiTqR86A) about Koen and his research."
-
-- date: 8 January 2020
-  headline: "Irene wins *discoverer of the year* by the faculty of Science! [(Press release)](https://www.universiteitleiden.nl/science-talents-and-discoveries/c.j-kok-public-award/nominee-lion)!"
-
-- date: 10 December 2019
-  headline: "**Koen defends his PhD with a cum laude (top 5%)!**"
-
-- date: 5 September 2019
-  headline: "The noise doubling paper is published in [Phys. Rev. B](https://journals.aps.org/prb/abstract/10.1103/PhysRevB.100.104506)!"
-
-- date: 25 August 2019
-  headline: "**Doohee got an assistant professor job at Yonsei University!**"
-
-- date: 25 July 2019
-  headline: "**The inhomogeneous superfluid paper is published in [Nature](https://www.nature.com/articles/s41586-019-1408-8)!**"
-  image: /images/dummy.png
-
-- date: 15 July 2019
-  headline: "We imaged the doubling of shot noise due to Andreev reflections in a STM, posted [on arXiv](https://arxiv.org/abs/1907.05808)."
-
-- date: 24 May 2019
-  headline: "The smart tip paper [is finally published !](https://iopscience.iop.org/article/10.1088/1361-6528/ab1c7f/pdf) A collaboration with the [Gröblacher Lab](http://groeblacherlab.tudelft.nl/) at TU Delft."
-  image: /images/dummy.png
-
-- date: 08 May 2019
-  headline: "**Irene defends her PhD!**"
-
-- date: 08 May 2019
-  headline: "Dome makes it on the [University website](https://www.universiteitleiden.nl/nieuws/2019/05/de-meest-stabiele-microscoop-ter-wereld)."
-  image: /images/dummy.png
-
-- date: 13 December 2018
-  headline: "Our paper about how to construct an STM is in [Review of Scientific Instruments](https://aip.scitation.org/doi/10.1063/1.5064442)."
-  image: /images/dummy.png
-
-- date: 08 October 2018
-  headline: "We discovered charge trapping in a high-Tc superconductor! Publication in [Nature Physics](https://www.nature.com/articles/s41567-018-0300-z)."
-  image: /images/dummy.png
-
-- date: 27 September 2018
-  headline: "Our MHz amplifier for STM is published in [Review of Scientific Instruments](https://aip.scitation.org/doi/10.1063/1.5043267)."
-  image: /images/dummy.png
-
-- date: 16 May 2018
-  headline: "Milan, Koen and Irene talk about superconductivity in [Made in Leiden](https://youtu.be/hxz22AYUGhM)."
-
-- date: 4 May 2018
-  headline: "Welcome Ram!"
-
-- date: 5-9. March 2018
-  headline: "Irene and Milan are at the March Meeting (Talk [Tue 10am, session E45](http://meetings.aps.org/Meeting/MAR18/Session/E45.11))"
-
-- date: 13 November 2017
-  headline: "[New paper](http://www.beilstein-journals.org/bjnano/content/pdf/2190-4286-8-238.pdf) published in collaboration with the group of Jan van Ruitenbeek"
-
-- date: 10 November 2017
-  headline: "Doohee makes the third place at the [LION Image Award](https://www.universiteitleiden.nl/en/news/2017/11/sander-blok-wins-lion-image-award-2017)."
-  image: /images/dummy.png
-
-- date: 9 October 2017
-  headline: "We contributed to Miguel and Jan's  [new paper](https://journals.aps.org/prb/abstract/10.1103/PhysRevB.96.134507).  "
-
-- date: 12 August 2017
-  headline: "[We got an ERC starting grant](https://www.universiteitleiden.nl/en/news/2017/08/two-erc-grants-for-leiden-physics)."
-
-- date: 10 August 2017
-  headline: "Our paper is published in [SciPost Physics](https://scipost.org/SciPostPhys.3.2.010/pdf)."
-
-- date: 17 - 21. July 2017
-  headline: "[Milan wins the Bryan R. Coles prize](https://www.universiteitleiden.nl/en/news/2017/07/milan-allan-wins-bryan-r.-coles-prize) at SCES 2017, Prague. Koen received the best poster presentation award."
-  image: /images/dummy.png
-
-- date: 17 - 21. July 2017
-  headline: "Koen, Maarten and Milan will be at SCES 2017, Prague. Come check out our posters on Tuesday&Thursday and talk on Thursday!"
-
-- date: 18 June 2017
-  headline: "**Paper on poor electronic screening published in  [PRB](https://journals.aps.org/prb/abstract/10.1103/PhysRevB.95.235141) as Editors' selection! **"
-
-- date: 15 May 2017
-  headline: Welcome Doohee!
-
-- date: 13 - 17. March 2017
-  headline: Koen & Irene give talks at the APS March Meeting in New Orleans.
-
-- date: 27 January - 3. March 2017
-  headline: "We are looking forward to co-hosting [the workshop on unconventional superconductivity](http://www.lorentzcenter.nl/lc/web/2017/877/info.php3?wsid=877&venue=Oort) at the Lorentz center."
-  image: /images/dummy.png
-
-- date: 1718. January 2017
-  headline: Irene, Koen, Maarten and Milan will be at Physics@Veldhoven 2017. (Talk at PT6.1 and poster at P9.022).
-
-- date: 25 November 2016
-  headline: "We are part of a newly granted [Vrije Programma](https://www.fom.nl/en/research/research-programmes/general-information//) on strange metals, together with the groups of ** Hussey, Golden, vHeumen, Zaanen, Schalm, Stoof and Vandoren**, see [press release](https://www.fom.nl/en/news/press-releases/2016/11/21/fom-awards-15-1-million-euros-to-highly-promising-research/). We also got a [Projectruimte](https://www.fom.nl/en/news/press-releases/2016/11/18/28634/)."
-
-- date: 19 September 2016
-  headline: "** Our first paper from Leiden is [online at Nature Physics](http://www.nature.com/nphys/journal/vaop/ncurrent/full/nphys3894.html)! **"
-  image: /images/dummy.png
-
-- date: 12 September 2016
-  headline: Koen is at Correl16, Julich.
-
-- date: 01 July 2016
-  headline: Milan is at the strongly correlated electron GRC 2016.
-
-- date: 24 June 2016
-  headline: Felix Baumberger is visiting.
-
-- date: 17 June 2016
-  headline: Irene is at SNS2016.
-
-- date: 28 April 2016
-  headline: "**Our results on the Mott & pseudo gap physics posted on [arXiv](http://arxiv.org/abs/1604.08343)!**"
-
-- date: 14 May 2016
-  headline: Ivan Bozovic is visiting.
-
-- date: 17 March 2016
-  headline: Koen, Irene & Vitaly present a poster at Sun Sailing Science.
-
-- date: 17 Jan 2016
-  headline: "We discover electronic order and pseudogap in a non-cuprate materal!"
-  image: /images/dummy.png
-
-- date: 01 Jan 2016
-  headline: Welcome Vitaly!
-
-- date: 17 June 2015
-  headline: Welcome Kees!
-
-- date: 17 June 2015
-  headline: "Maarten wins the LION image award! Check out his [submission](https://www.physics.leidenuniv.nl/index.php?id=11573&news=757&type=lion&ln=EN)."
-  image: /images/dummy.png
-
-- date: 17 June 2015
-  headline: "** We win a Vidi grant: 800kEUR to invest in science! ([Leiden news](http://www.news.leiden.edu/news-2015/5-vidis-for-leiden-reserachers.html), [FOM news item](http://www.fom.nl/live/english/news/archives/pressreleases2015/artikel.pag?objectnumber=297954)) **"
-
-- date: 01 Sept 2015
-  headline: "Welcome Koen and Maarten: from Master- to PhD-students"
-
-- date: 17 June 2015
-  headline: "We got our commercial STM from [Unisoku](http://www.unisoku.com/), and we are already busy modifying."
-
-- date: 01 Jan 2015
-  headline: Welcome Irene, Gijsbert & Milan — ** our lab is officially starting**!
+- date: 7 March 2022
+  headline: "A preprint on our novel method for robustly incorporating IMU measurements into LiDAR odometry pipelines, titled 'Direct LiDAR-Inertial Odometry,' is now available on [arXiv](https://arxiv.org/abs/2203.03749)! A short video on it is also available on [YouTube](https://www.youtube.com/watch?v=6JTeZxL0hSE)."
