--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -9,7 +9,7 @@
     display: arXiv
   highlight: 1
   note: "[Paper](https://arxiv.org/abs/2203.03749) &nbsp; &nbsp;
-         [YouTube](https://www.youtube.com/watch?v=6JTeZxL0hSE)"
+         [YouTube](https://www.youtube.com/watch?v=4-oXjG8ow10)"
 
 - title: "Direct LiDAR Odometry: Fast Localization with Dense Point Clouds"
   image: publications/dlo.png
