Added Matthew's info and carousel pic

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -117,7 +117,7 @@
     <br>
     <br>
     <br>
-    <a href="mailto:@ucla.edu" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="">Website</a>
+    <a href="mailto:matthewguemmer@ucla.edu" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="https://www.linkedin.com/in/matthewguemmer/">Website</a>
 
 - name: Jacob Sayono
   type: undergrad
