--- a/_data/members.yml
+++ b/_data/members.yml
@@ -86,7 +86,7 @@
     MS Student, ECE
     BS, UCLA 2021
     <br>
-    <b>Research</b>: LiDAR odometry, Local/Motion Planning
+    <b>Research</b>: LiDAR Odometry
     <a href="mailto:ryguyn@ucla.edu" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="https://www.linkedin.com/in/ryan-nemiroff">Website</a>
 
 - name: Cat Nystrom
