Updated Alex' details

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -103,8 +103,8 @@
   type: grad
   photo: people/azeng.jpg
   info: |
-    MS Student, ECE
-    BS, University of Washington 2021
+    MS Student, MAE
+    BS, University of Washington 2022
     <br>
     <b>Research</b>: Path Planning, Optimal Control
     <a href="mailto:alex87@ucla.edu" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="https://www.linkedin.com/in/jiaping-zhen">Website</a>
