Second-to-last commit

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -99,7 +99,7 @@
     <b>Research</b>: Lidar Odometry on a Ground Robot
     <a href="mailto:katenystrom431@ucla.edu" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="https://www.linkedin.com/in/kate-nystrom-84778a1ba">Website</a>
 
-- name: Ziaping (Alex) Zeng
+- name: Jiaping (Alex) Zeng
   type: grad
   photo: people/azeng.jpg
   info: |
