Last second-to-last commit

--- a/_data/navbar.yml
+++ b/_data/navbar.yml
@@ -10,8 +10,8 @@
 - title: "People"
   url: "/members/"
 
-- title: "News"
-  url: "/news/"
+# - title: "News"
+#   url: "/news/"
 
 - title: "Media"
   url: "/media/"
