Fixed Alex' pic names

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -101,7 +101,7 @@
 
 - name: Jiaping (Alex) Zhen
   type: grad
-  photo: people/azeng.jpg
+  photo: people/azhen.jpg
   info: |
     MS Student, MAE
     BS, University of Washington 2022
