--- a/_data/members.yml
+++ b/_data/members.yml
@@ -23,7 +23,7 @@
   type: grad
   photo: people/sgessow.jpg
   info: |
-    MS/PhD Student, MAE
+    PhD Student, MAE
     BS, UCLA 2020    
     <b>Research</b>: Nonlinear and Adaptive Control
     <a href="mailto:sgessow@ucla.edu" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="https://www.linkedin.com/in/samuel-gessow/">Website</a>
@@ -60,7 +60,7 @@
   type: grad
   photo: people/senayati.jpg
   info: |
-    MS/PhD Student, MAE
+    PhD Student, MAE
     BS, UCLA 2022
     <b>Research</b>: Trajectory Planning
     <a href="mailto:sarahena@g.ucla.edu" style="white-space: nowrap">Email</a> &nbsp; &nbsp; <a href="">Website</a>
