--- a/_data/research.yml
+++ b/_data/research.yml
@@ -3,7 +3,7 @@
   description: "Research and development of real-time algorithms for fast and reliable localization and mapping for computationally-limited robotic platforms using LiDAR and IMU sensors."
   researchers: K. Chen, R. Nemiroff
 
-- title: "Efficient, Motion Primitive-based Path Planning for UAVs"
+- title: "Efficient Motion Primitive Search Path Planning"
   image: research/mppathplan.gif
   description: "This research project focuses on expanding path planning capabilities for UAVs to more expansive ranges made possible by LiDAR technology. Research involves effective methods to smoothly connect motion primitives while preserving path optimality and retaining computational efficiency."
   researchers: H. Levy
@@ -18,7 +18,7 @@
   description: "This research explores the interaction of multiple chaser spacecraft with uncontrollable (and, often, limitedly observable) tumbling objects in orbit. This includes the implementation of model predictive control for trajectory tracking and planning, and the application of distributed techniques including improvized task allocation algorithms in a target-centered reference frame."
   researchers: A. John Sabu
 
-- title: "Adaptive Robust Model Predictive Control with Matched and Unmatched Uncertainties"
+- title: "Adaptive Robust Model Predictive Control"
   image: research/armpc.png
   description: "This research is on developing new adaptive controllers for non-linear systems. It is focused on controllers suitable for adaptive MPC for general systems with unmatched uncertainty. Possible applications for this work include aerial systems as well as underactuated systems."
   researchers: S. Gessow
